added hmtl elements

--- a/builder/index.html
+++ b/builder/index.html
@@ -14,18 +14,58 @@
 </head>
 
 <body>
-    <header>
-        <div class="gutter-right logo">
-            <img src="../assets/big-logo.png" />
-        </div>
-    </header>    
-    <button id="logout">Logout</button>
+    <button id="logout">Logout</button> 
     <main>
-        <h1>You are logged in!</h1>
+        <div class="dropdowns">
+            <label>
+                Land
+                <select id="land-dropdown">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                </select>
+            </label>
+            <label>
+                Castle
+                <select id="castle-dropdown">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                </select>
+            </label>
+            <label>
+                Creature
+                <select id="creature-dropdown">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                </select>
+            </label>
+        </div>
+        <div class="images">
+            <div class="land">
+                <img id="land-image">
+            </div>
+            <div class="castle">
+                <img id="castle-image">
+            </div>
+            <div class="creature">
+                <img id="creature-image">
+            </div>
+        </div>
+        <div class="info">
+            <div class="count"></div>
+            <div class="messages"></div>
+            <div>
+                <label>
+                    New message
+                    <input id="message-input" />
+                </label>
+                <button id="message-button">Add a message</button>
+            </div>
+            <div class="list"></div>
+        </div>
     </main>
-    <footer>
-        <div class="copy gutter-right">&copy; 2021 Alchemy Code Lab</div>
-    </footer>
     <script type="module" src="./builder.js"></script>
 </body>
 
