started fetch/builder functions, add DOM to js

--- a/builder/index.html
+++ b/builder/index.html
@@ -56,11 +56,11 @@
         </section>
         <section class="inputs">
             <form class="name-form">
-                <input name="name">
-                <button>Town Name</button>
+                <input name="name" value="name the town">
+                <button>Create</button>
             </form>
             <form class="message-form">
-                <input name="message" value="message">
+                <input name="message" value="new message">
                 <button>Speaketh</button>
             </form>
         </section>
